# nsm-v2

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Doxyfile  Justfile  LICENSE  README.md  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  pages.yml  qa.yml  release.yml
.jules/: sentinel.md
apps/nift/: CMakeLists.txt  main.cpp
crates/assets/: CMakeLists.txt
crates/assets/include/nift/assets/: pipeline.hpp
crates/assets/src/: pipeline.cpp
crates/cli/: CMakeLists.txt
crates/cli/include/nift/cli/: argparse.hpp  commands.hpp
crates/cli/src/: argparse.cpp  commands.cpp
crates/compat/: CMakeLists.txt
crates/compat/include/nift/compat/: migrator.hpp
crates/compat/src/: migrator.cpp
crates/core/: CMakeLists.txt
crates/core/fs/: filesystem.cpp
crates/core/include/nift/core/: concepts.hpp  datetime.hpp  filesystem.hpp  path.hpp  quoted.hpp  str_fns.hpp  system_info.hpp  types.hpp
crates/core/path/: path.cpp
crates/core/str/: quoted.cpp  str_fns.cpp
crates/core/sys/: system_info.cpp
crates/core/time/: datetime.cpp
crates/images/: CMakeLists.txt
crates/images/include/nift/images/: optimizer.hpp
crates/images/src/: optimizer.cpp
crates/markdown/: CMakeLists.txt
crates/markdown/include/nift/markdown/: code_highlight.hpp  front_matter.hpp  markdown.hpp
crates/markdown/src/: code_highlight.cpp  front_matter.cpp  markdown.cpp
crates/parser/: CMakeLists.txt
crates/parser/ast/: ast.cpp  parser.cpp
crates/parser/evaluator/: evaluator.cpp
crates/parser/include/nift/parser/: ast.hpp  evaluator.hpp  lexer.hpp  parser.hpp  token.hpp
crates/parser/lexer/: lexer.cpp  token.cpp
crates/plugin/: CMakeLists.txt
crates/plugin/include/nift/plugin/: plugin_abi.h  plugin_loader.hpp
crates/plugin/src/: plugin_loader.cpp
crates/project/: CMakeLists.txt
crates/project/cache/: build_cache.cpp
crates/project/include/nift/project/: build_cache.hpp  project.hpp
crates/project/info/: project.cpp
crates/runtime/: CMakeLists.txt
crates/runtime/expr/: expr.cpp
crates/runtime/include/nift/runtime/: expr.hpp  lua_runtime.hpp
crates/runtime/lua/: lua_runtime.cpp
crates/server/: CMakeLists.txt
crates/server/assets/: assets.cpp
crates/server/http/: http_server.cpp
crates/server/include/nift/server/: assets.hpp  file_watcher.hpp  http_server.hpp  native_watcher.hpp  watcher_types.hpp
crates/server/watcher/: file_watcher.cpp  native_watcher.cpp
crates/tailwind/: CMakeLists.txt
crates/tailwind/include/nift/tailwind/: tailwind.hpp
crates/tailwind/src/: tailwind.cpp
docs/: README.md  architecture.md  migration.md  phase-8-plan.md  plugin-author-v2.md  plugin-author.md  quickstart.md  sse-livereload.md  template-inheritance.md
docs/adr/: 0000-process.md  0001-build-system-cmake-presets.md  0002-dependency-manager-vcpkg.md  0003-cpp-standard-baseline.md  0004-lua-bridge-sol2.md  0005-build-cache-blake3-json.md  0006-work-stealing-pool.md  0007-mmap-and-simd-scanning.md  0008-dev-server-cpp-httplib.md  0009-cli-plugin-migrator.md  0010-packaging-and-ci.md  0011-sse-livereload.md  0012-cbor-cache-format.md  0013-native-filesystem-watcher.md  0014-template-inheritance.md  0015-markdown-support.md  0016-tailwind-integration.md  0017-asset-pipeline.md  0018-image-optimization.md  0019-plugin-structured-args.md  README.md
docs/recon/: README.md  build-system.md  deps.md  hotpaths.md  loc.md  risks.md  toolchain.md
legacy/: README_LEGACY.md
packaging/: README.md
packaging/aur/: PKGBUILD
packaging/debian/: control
packaging/homebrew/: nift.rb
tests/: CMakeLists.txt
tests/bench/: CMakeLists.txt  bench_simd_scanner.cpp
tests/fuzz/: CMakeLists.txt  fuzz_lexer.cpp  fuzz_parser.cpp
tests/qa/: README.md
tests/qa/chaos/: test_chaos.py
tests/qa/fuzzing/: CMakeLists.txt  fuzz_cli.cpp  fuzz_parser.cpp  fuzz_simd_scanner.cpp  run_fuzz.sh
tests/qa/network/: test_server_security.py
tests/qa/parity/: run_parity.sh
tests/qa/parity/mock_project/: nift.config
tests/qa/parity/mock_project/content/: about.html  index.html
tests/qa/parity/mock_project/layouts/: default.html
tests/qa/parity/mock_project/partials/: footer.html
tests/qa/recovery/: test_signal_recovery.py
tests/qa/security/: CMakeLists.txt  test_lua_sandbox.cpp
tests/unit/: CMakeLists.txt  test_argparse.cpp  test_assets.cpp  test_assets_pipeline.cpp  test_build_cache.cpp  test_cache_extra.cpp  test_datetime.cpp  test_evaluator.cpp  test_executor.cpp  test_expr.cpp  test_file_watcher.cpp  test_filesystem.cpp  test_function_invocation.cpp  test_http_server.cpp  test_images.cpp  test_lexer.cpp  test_lua_runtime.cpp  test_markdown.cpp  test_migrator.cpp  test_mmap_reader.cpp  test_native_watcher.cpp  test_parser.cpp  test_path.cpp  test_pipeline.cpp  test_plugin_loader.cpp  test_project.cpp  test_quoted.cpp  test_simd_scanner.cpp  test_str_fns.cpp  test_system_info.cpp  test_tailwind.cpp  test_template_inheritance.cpp  test_types.cpp
website/: 404.html  DESIGN.md  README.md  architecture.html  build.py  changelog.html  cli.html  docs.html  examples.html  faq.html  index.html  install.html  plugins.html
website/assets/css/: site.css
website/assets/js/: site.js
website/pages/: 404.body.html  architecture.body.html  changelog.body.html  cli.body.html  docs.body.html  examples.body.html  faq.body.html  index.body.html  install.body.html  plugins.body.html
